Fixed modal:  Chenged backgorund to a plain white img and the z-index to 5, so that nothings else shows.  Also, got rid of the DOM manipulation to add an header and re-created the header inside of the render.  This also had the nice side-effect of my button being dynamically updated with the correct count.

--- a/Client/public/modal.css
+++ b/Client/public/modal.css
@@ -1,12 +1,18 @@
 body {
-  align-items: center;
   display:block;
 }
 
 #app {
-  height: 80%;
+  height: 100%;
   width: 100%;
-  margin-left: 30%;
+  position: fixed;
+  top:0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 5;
+  background-image: url('white_background.png');
+  box-sizing: border-box;
 }
 #modalHeader {
   top: 0px;
@@ -15,7 +21,6 @@ body {
   background-color: #f9fafb;
   display: flex;
   justify-content: space-between;
-  padding: 4px 16px;
   width: 100%;
 }
 #modalHeader h3 {
@@ -56,6 +61,7 @@ body {
 }
 
 #flex-container {
+  margin-left: 30%;
   display:block;
 }
 .picture-module-vertical-scroll {
